--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.9.0"
+  },
+  "dependencies": {
+    "systemjs": "^3.1.6"
   }
 }
