--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/brunomorello/bmorenos-frame#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "babel-cli": "^6.10.1",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
     "babel-preset-es2015": "^6.9.0"
   },
   "dependencies": {
-    "systemjs": "^3.1.6"
+    "@babel/polyfill": "^7.4.4",
+    "systemjs": "^0.19.31"
   }
 }
